update theme config and project list

--- a/_config.cactus.yml
+++ b/_config.cactus.yml
@@ -18,7 +18,7 @@ nav:
   articles: /archives/
   tag: /tags/
   projects: http://github.com/tzzs
-  theme: https://imtzz.com/
+  Theme: https://imtzz.com/
   about: /about/
   search: /search/
 
