update theme config and project list

--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           echo "generate files"
           hexo clean && hexo douban && hexo generate
-          hexo clean && hexo config theme cactus && hexo config url https://imtzz.com/cactus && hexo config public_dir public/cactus && hexo config language en
+          hexo config theme cactus && hexo config url https://imtzz.com/cactus && hexo config public_dir public/cactus && hexo config language en
           hexo generate
 
       - name: Git Repository Update
