--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -540,8 +540,8 @@ enter_transitions: true
 # canvas_ribbon (靜止彩帶背景)
 # See: https://github.com/hustcc/ribbon.js
 canvas_ribbon:
-  enable: true
-  size: 150
+  enable: false
+  size: 90
   alpha: 0.6
   zIndex: -1
   click_to_change: true
@@ -645,7 +645,7 @@ subtitle:
   sub:
 
 # Loading Animation (加載動畫)
-preloader: true
+preloader: false
 
 # aside (側邊欄)
 # --------------------------------------
