update theme config and project list

--- a/_config.cactus.yml
+++ b/_config.cactus.yml
@@ -51,7 +51,7 @@ posts_overview:
 # Note: this does not work together with pagination, since the pagination
 # plugin will sort pages by date of creation.
 archive:
-  sort_updated: true
+  sort_updated: false
 
 # Customize the article view.
 # Options:
