--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -666,7 +666,8 @@ aside:
       link: https://github.com/tzzs
   card_announcement:
     enable: true
-    content: 感谢访问本站， 若喜欢请收藏 ^_^   <br/>如果有任何问题可以邮件我，我会尽可能第一时间回复。<br/> Thank you for visiting this site, if you like it, please bookmark ^_^<br/>If you have any questions, you can email me and I will reply as soon as possible.
+    content: Happy New Year!
+    # 感谢访问本站， 若喜欢请收藏 ^_^   <br/>如果有任何问题可以邮件我，我会尽可能第一时间回复。<br/> Thank you for visiting this site, if you like it, please bookmark ^_^<br/>If you have any questions, you can email me and I will reply as soon as possible.
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
