--- a/_config.cactus.yml
+++ b/_config.cactus.yml
@@ -43,7 +43,7 @@ tags_overview: true
 posts_overview:
   show_all_posts: false
   post_count: 8
-  sort_updated: true
+  sort_updated: false
 
 # Customize the archive view.
 # Options:
@@ -57,7 +57,7 @@ archive:
 # Options:
 #   - show_updated: show the last modification date.
 post:
-  show_updated: true
+  show_updated: false
 
 # Customize the copyright years
 # Note: if start_year/end_year not provided, will use current year.
