--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -92,7 +92,7 @@ disable_top_img: false
 index_img: false
 
 # If the banner of page not setting, it will show the top_img
-default_top_img: https://cos5-1255991898.cos.ap-chongqing.myqcloud.com/tk/MOVIES.png
+default_top_img: /img/vector_landscape_3.svg
 
 # The banner image of archive page
 archive_img: /img/archive.jpg
