--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: TAN'S BLOG
 # subtitle: 'KEEP GOING! ALWAYS!'
-description: "Hi, I'm TAN. Thank you for visiting this site. If you have any questions, you can email me and I will reply as soon as possible."
+description: "Have fun!"
 keywords: tzz,java,c,linux,blog,code,python,go,sql
 author: TZZ
 language: zh-CN
