--- a/_config.cactus.yml
+++ b/_config.cactus.yml
@@ -18,7 +18,6 @@ nav:
   articles: /archives/
   tag: /tags/
   projects: http://github.com/tzzs
-  Theme: https://tzzs.github.io
   about: /about/
   search: /search/
 
@@ -35,11 +34,11 @@ social_links:
     link: http://github.com/tzzs
   -
     icon: mail
-    link: mailto:tzzprc@outlook.com
+    link: mailto:tzzprc#outlook.com
 
 # Customize the overview with displaying a tagcloud on the index page.
 # Options: https://hexo.io/docs/helpers.html#tagcloud
-tags_overview: true
+tags_overview: false
 
 # Customize the overview with the most recent blog posts on the index page.
 # Options:
@@ -49,7 +48,7 @@ tags_overview: true
 posts_overview:
   show_all_posts: false
   post_count: 8
-  sort_updated: false
+  sort_updated: true
 
 # Customize the archive view.
 # Options:
@@ -57,13 +56,13 @@ posts_overview:
 # Note: this does not work together with pagination, since the pagination
 # plugin will sort pages by date of creation.
 archive:
-  sort_updated: false
+  sort_updated: true
 
 # Customize the article view.
 # Options:
 #   - show_updated: show the last modification date.
 post:
-  show_updated: false
+  show_updated: true
 
 # Customize the copyright years
 # Note: if start_year/end_year not provided, will use current year.
@@ -154,7 +153,7 @@ open_graph:
 
 # Enable MathJax support for Latex
 mathjax:
-  enabled: false
+  enabled: true
 
 # Fill in your Disqus Comments Shortname to enable Disqus comments.
 disqus:
