update baidu analytics

--- a/_config.cactus.yml
+++ b/_config.cactus.yml
@@ -175,8 +175,8 @@ google_analytics:
 
 # Fill in your Baidu Analytics tracking ID to enable Baidu Analytics.
 baidu_analytics:
-  enabled: false
-  id: 2e6da3c375c8a87f5b664cea6d4cb29c
+  enabled: true
+  id: b36c2303269c1178ba0b47ad3c6a74bc
 
 # Fill in your Cloudflare Analytics tracking ID to enable Cloudflare Analytics.
 cloudflare_analytics:
